src/MessageBox/HeaderLayout.scss
@import '../common';

.header
{
    @include FontLight();
    box-sizing:border-box;
    min-height      : 60px;
    padding         : 16px 18px;
    padding-left    : 30px;
    font-weight     : normal;
    font-size       : 20px;
    color           : white;
    display         : flex;
    justify-content : space-between;
    align-items     : center;
    border-radius   : 8px 8px 0px 0px;
    line-height     : 24px;
}
.title-label{
    display: inline-block;
    width: 509px;
    word-break: break-word;
}

.close
{
    width            : 25px;
    height           : 25px;
    border-radius    : 50%;
    border           : none;
    display          : flex;
    justify-content  : center;
    align-items      : center;
    background-color : rgba(red($D10), green($D10), blue($D10), 0.2);
    cursor           : pointer;
}

.close:hover, .close:focus {
    background-color : rgba(red($D10), green($D10), blue($D10), 0.4);
}

.close > svg {
    margin-top : 1px;
    path { stroke: #fff; }
}


.red          { background-color: $paletteR1 }
.blue         { background-color: $paletteB1 }
.green        { background-color: $paletteG1 }
.lightGreen   { background-color: $paletteG2 }

